# cuda_learn

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  ncu_prof.sh
0_hello_world/: hello_world.cu
10_rms_norm/: rms_norm_1d.cu
1_sum_arrays/: sum_arrays.cu
2_sum_matrix/: CMakeLists.txt  sum_matrix.cu
3_recursiveReduce/: CMakeLists.txt  recursive_reduce.cu
4_sgemm/: CMakeLists.txt  sgemm.cu
5_transpose/: CMakeLists.txt  transpose.cu
6_prefixSum/: CMakeLists.txt  prefix_sum.cu
7_merge/: CMakeLists.txt  merge.cu
8_hgemm/: CMakeLists.txt  hgemm_bank_conflict.cu  hgemm_mma.cu  hgemm_wmma.cu
8_hgemm/common/: tester.h
9_flash_attn/: flash_attn_mma_split_q.cu
include/: utils.h
ncu/: CMakeLists.txt  combine_memory_access.cu
